solve mobile overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 @import "tailwindcss";
+
+.font-anton {
+    font-family: 'Anton', sans-serif;
+}
